config twiddling
